Add build endpoint with maven tool